<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" >

    <string name="app_name">GrandLine Mania</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="answered_correct">AWESOME!</string>
    <string name="answered_correct_detail">You solved the puzzle.</string>
    <string name="continue_button">CONTINUE</string>
    <string name="play_button">PLAY</string>
    <string name="empty"> </string>
    <string name="back_button">BACK</string>
    <string name="language">LANGUAGE</string>
    <string name="info">INFO</string>
    <string name="sound_on">ON</string>
    <string name="sound_off">OFF</string>
	<string name="game_finished">SUPER!</string>
	<string name="game_finished_detail_1">You\'ve solved all puzzles.</string>
	<string name="game_finished_detail_2">Stay tuned. Wait for the next update.</string>
	<string name="game_finished_detail_3">TO BE CONTINUED</string>
    
</resources>